# mailsentra

./: .gitignore  .replit  CONTRIBUTING.md  FINAL_REPORT.md  Generate-Documentation.ps1  README.md  REVIEW_SUMMARY.md  SECURITY_CODE_REVIEW.md  SYSTEM_DOCUMENTATION.md  TEST_RESULTS.md  THE_MAILSENTRA_SYSTEM.md  UI_STYLING_ISSUES.md  clean_docs.py  mailsentra-folder-structure.txt  push-prod.bat  pyproject.toml  replit.md  run_backend.sh  start-app.bat  structure.txt  tree.txt
backend/: .env  admin-make.py  alembic.ini  backend_structure.txt  check_user.py  decode_token.py  main.py  make-admin.py  requirements.txt  retrain_service.py  run.py  seed_training_data.py  spam_detector.db  token.txt  train_model.py
backend/alembic/: env.py
backend/alembic/versions/: 20251025_1425-15ff7144aad5_initial_migration.py  20251028_1407-61f6ed205321_merge_heads.py  add_api_keys.py  (+1 more)
backend/app/: config.py  database.py  dependencies.py
backend/dataset/: DATASET_FORMAT.md  sample_spam.csv  uploaded_20251104_012936_test.csv  uploaded_20251111_125205_realistic_spam_phishing_dataset.csv
backend/debug_files/: admin.py  analyze.py  api_keys_backup.py  auth.py  feedback.py  logs.py  metrics.py  model_service.py  preprocessing.py  retrain.py
backend/ml_models/: spam_model.pkl
backend/scripts/: extract_emails.py
backend/tests/: final_validation.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  TRAINING_GUIDE.md  TRAINING_QUICK_START.md
frontend/: fronted.txt  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
(+59 files in other folders)
