[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "bcrypt==4.1.1",
    "beautifulsoup4==4.12.2",
    "fastapi==0.104.1",
    "nltk>=3.9",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "scikit-learn>=1.5.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
